# Bacchus

./: .gitignore  CMakeLists.txt
include/project/: algorithms.h  featuretracker.h  meanshift.h  mouthtracker.h  templatematcher.h  templatetracking_test.h  utilities.h
src/: algorithms.cpp  featuretracker.cpp  main.cpp  main.h  meanshift.cpp  mouthtracker.cpp  templatematcher.cpp  templatetracking_test.cpp  utilities.cpp
